<resources>
    <string name="forcecasting">FoXcEcASTiNG</string>
    <string name="forcepower_name">Forcepower Name</string>
    <string name="forcepowererror404">Force power not found</string>
    <string name="favorite_forcepower_button">Favorite Forcepower</string>
    <string name="forcecasting_nosuchforcepower">No Such Forcepower Found</string>
    <string name="force">FoXcE</string>
    <string name="forcepowers">forcepowers</string>
    <string name="force_points">Force\nPoints</string>
    <string name="force_powers_known">Force Powers\nKnown</string>
    <string name="sortABCdown"><font color="#D4af37">ABC <font size="21"><b>↓</b></font></font></string>
    <string name="sortABCup"><font color="#D4af37">ABC <font size="21"><b>↑</b></font></font></string>
    <string name="sortLvldown"><font color="#D4af37">LvL <font size="21"><b>↓</b></font></font></string>
    <string name="sortLvlup"><font color="#D4af37">LvL <font size="21"><b>↑</b></font></font></string>
    <string name="Dark"><font color="red">Dark</font></string>
    <string name="Light"><font color="cyan">Light</font></string>
    <string name="All"><font color="#D4af37">All</font></string>
    <string name="insanity2"><font size="18"><font face="sans-serif">\n"    "At the end of each of its turns, an affected target can make a Wisdom saving throw. If it succeeds, this effect ends for that target.\n<b>"    "Force Potency:</b>When you cast this power using a power slot of 6th level or higher, the radius of the sphere increases by 5 feet for each force slot level above 5th.</font></font></string>
    <string name="insanitytable1"><font size="18"><font face="sans-serif">The creature uses all its movement to move in a\nrandom direction. To determine the direction, roll a d8\nand assign a direction to each die face. The creature\ndoesn\'t take an action this turn.</font></font></string>
    <string name="insanitytable2"><font size="18"><font face="sans-serif">The creature doesn\'t move or take actions this turn.</font></font></string>
    <string name="insanitytable3"><font size="18"><font face="sans-serif">The creature uses its action to make a melee attack\nagainst a randomly determined creature within its\nreach. If there is no creature within its reach, the\ncreature does nothing this turn.</font></font></string>
    <string name="mass_animation2"><font size="18"><font face="sans-serif"><b>"    "Force Potency:</b>If you cast this power using a force slot of 6th level or higher, you can animate two additional objects for each slot level above 5th.</font></font></string>
    <string name="mass_animationHeader1"><font size="18"><font face="sans-serif"><b>Size</b></font></font></string>
    <string name="mass_animationHeader2"><font size="18"><font face="sans-serif"><b>HP</b></font></font></string>
    <string name="mass_animationHeader3"><font size="18"><font face="sans-serif"><b>AC</b></font></font></string>
    <string name="mass_animationHeader4"><font size="18"><font face="sans-serif"><b>Attack</b></font></font></string>
    <string name="mass_animationtable1_1"><font size="18">Tiny</font></string>
    <string name="mass_animationtable1_2"><font size="18">20</font></string>
    <string name="mass_animationtable1_3"><font size="18">16</font></string>
    <string name="mass_animationtable1_4"><font size="18">+6 to hit, 1d4 + 3 damage</font></string>
    <string name="mass_animationtable2_1"><font size="18">Small</font></string>
    <string name="mass_animationtable2_2"><font size="18">25</font></string>
    <string name="mass_animationtable2_3"><font size="18">15</font></string>
    <string name="mass_animationtable2_4"><font size="18">+6 to hit, 1d8 + 2 damage</font></string>
    <string name="mass_animationtable3_1"><font size="18">Medium</font></string>
    <string name="mass_animationtable3_2"><font size="18">40</font></string>
    <string name="mass_animationtable3_3"><font size="18">13</font></string>
    <string name="mass_animationtable3_4"><font size="18">+5 to hit, 2d6 + 1 damage</font></string>
    <string name="mass_animationtable4_1"><font size="18">Large</font></string>
    <string name="mass_animationtable4_2"><font size="18">50</font></string>
    <string name="mass_animationtable4_3"><font size="18">10</font></string>
    <string name="mass_animationtable4_4"><font size="18">+6 to hit, 2d10 + 2 damage</font></string>
    <string name="mass_animationtable5_1"><font size="18">Huge</font></string>
    <string name="mass_animationtable5_2"><font size="18">80</font></string>
    <string name="mass_animationtable5_3"><font size="18">10</font></string>
    <string name="mass_animationtable5_4"><font size="18">+8 to hit, 2d12 + 4 damage</font></string>
    <string name="one"><font size="18"><font face="sans-serif">1</font></font></string>
    <string name="twotosix"><font size="18"><font face="sans-serif">2-6</font></font></string>
    <string name="seventoeight"><font size="18"><font face="sans-serif">7-8</font></font></string>
    <string name="at_will">At Will</string>
    <string name="first_level">1st-Level</string>
    <string name="second_level">2nd-Level</string>
    <string name="third_level">3rd-Level</string>
    <string name="fourth_level">4th-Level</string>
    <string name="fifth_level">5th-Level</string>
    <string name="sixth_level">6th-Level</string>
    <string name="seventh_level">7th-Level</string>
    <string name="eighth_level">8th-Level</string>
    <string name="equipment_menu_weapon"><font color="#d4af37">Weapons</font></string>
    <string name="equipment_menu_simple"><font color="#d4af37">"     "Simple</font></string>
    <string name="equipment_menu_martial"><font color="#d4af37">"     "Martial</font></string>
    <string name="equipment_menu_vibroweapon"><font color="#d4af37">"     "Vibroweapon</font></string>
    <string name="equipment_menu_lightweapon"><font color="#d4af37">"     "Lightweapon</font></string>
    <string name="equipment_menu_blaster"><font color="#d4af37">"     "Blaster</font></string>
    <string name="equipment_menu_favorites"><font color="#D4af37">Favorites</font></string>
    <string name="equipment_menu_armors_and_shields"><font color="#d4af37">Armors &amp; Shields</font></string>
    <string name="equipment_menu_light"><font color="#d4af37">"     "Light</font></string>
    <string name="equipment_menu_medium"><font color="#d4af37">"     "Medium</font></string>
    <string name="equipment_menu_heavy"><font color="#d4af37">"     "Heavy</font></string>
    <string name="equipment_menu_armors"><font color="#d4af37">"     "Armor</font></string>
    <string name="equipment_menu_shields"><font color="#D4af37">"     "Shield</font></string>
    <string name="equipment_menu_advgear"><font color="#d4af37">Adventuring Gear</font></string>
    <string name="equipment_menu_ammunition"><font color="#d4af37">"     "Ammunition</font></string>
    <string name="equipment_menu_communications"><font color="#d4af37">"     "Communications</font></string>
    <string name="equipment_menu_data"><font color="#d4af37">"     "Data</font></string>
    <string name="equipment_menu_life_support"><font color="#d4af37">"     "Life support</font></string>
    <string name="equipment_menu_medical_supplies"><font color="#d4af37">"     "Medical supply</font></string>
    <string name="equipment_menu_storage"><font color="#d4af37">"     "Storage</font></string>
    <string name="equipment_menu_utilities"><font color="#d4af37">"     "Utility</font></string>
    <string name="equipment_menu_accessories"><font color="#d4af37">"     "Accessory</font></string>
    <string name="equipment_menu_tools"><font color="#d4af37">"     "Tool</font></string>
    <string name="equipment_menu_ok"><font color="#d4af37">Confirm Filters</font></string>
    <string name="equipment_menu_filters">Filters:</string>
    <string name="equipment_info_equipment_packs">"   "<font color="#d4af37">Equipment Packs</font></string>
    <string name="equipment_info_ammunition">"   "<font color="#d4af37">Ammunition</font></string>
    <string name="equipment_info_communications">"   "<font color="#d4af37">Communications</font></string>
    <string name="equipment_info_data" >"   "<font color="#d4af37">Data</font></string>
    <string name="equipment_info_explosives">"   "<font color="#d4af37">Explosives</font></string>
    <string name="equipment_info_life_support">"   "<font color="#d4af37">Life Support</font></string>
    <string name="equipment_info_medical_supplies">"   "<font color="#d4af37">Medical Supplies</font></string>
    <string name="equipment_info_storage">"   "<font color="#d4af37">Storage</font></string>
    <string name="equipment_info_utilities">"   "<font color="#d4af37">Utilities</font></string>
    <string name="equipment_info_weapon_and_armor_accessories">"   "<font color="#d4af37">Accessories</font></string>
    <string name="feats_menu_str"><font color="#d4af37">"       "Strength</font></string>
    <string name="feats_menu_dex"><font color="#d4af37">"       "Dexterity</font></string>
    <string name="feats_menu_con"><font color="#d4af37">"       "Constitution</font></string>
    <string name="feats_menu_int"><font color="#d4af37">"       "Intelligence</font></string>
    <string name="feats_menu_wis"><font color="#d4af37">"       "Wisdom</font></string>
    <string name="feats_menu_cha"><font color="#d4af37">"       "Charisma</font></string>
    <string name="feats_menu_preq"><font color="#D4af37">Prerequisite</font></string>
    <string name="feats_menu_preq_level"><font color="#d4af37">"    "&lt; Level:</font></string>
    <string name="feats_menu_preq_level_1"><font color="#d4af37">"           "4th</font></string>
    <string name="feats_menu_preq_level_2"><font color="#d4af37">"           "12th</font></string>
    <string name="feats_menu_preq_type"><font color="#d4af37">"    "Type:</font></string>
    <string name="feats_menu_preq_type_1"><font color="#d4af37">"           "Humanoid</font></string>
    <string name="feats_menu_preq_type_2"><font color="#d4af37">"           "Droid</font></string>
    <string name="feats_menu_preq_type_3"><font color="#d4af37">"           "Beast</font></string>
    <string name="feats_menu_preq_size"><font color="#d4af37">"    "Size:</font></string>
    <string name="feats_menu_preq_size_1"><font color="#d4af37">"           "tiny</font></string>
    <string name="feats_menu_preq_size_2"><font color="#d4af37">"           "small</font></string>
    <string name="feats_menu_preq_size_3"><font color="#d4af37">"           "medium</font></string>
    <string name="feats_menu_preq_forcecasting"><font color="#d4af37">"    "ForceCasting:</font></string>
    <string name="feats_menu_preq_forcecasting_1"><font color="#d4af37">"           "None</font></string>
    <string name="feats_menu_preq_forcecasting_2"><font color="#d4af37">"           "0 level</font></string>
    <string name="feats_menu_preq_forcecasting_3"><font color="#d4af37">"           "2nd level</font></string>
    <string name="feats_menu_preq_forcecasting_4"><font color="#d4af37">"           "3rd level</font></string>
    <string name="feats_menu_preq_techcasting"><font color="#d4af37">"    "TechCasting:</font></string>
    <string name="feats_menu_preq_techcasting_1"><font color="#d4af37">"           "None</font></string>
    <string name="feats_menu_preq_techcasting_2"><font color="#d4af37">"           "0 level</font></string>
    <string name="feats_menu_preq_techcasting_3"><font color="#d4af37">"           "2nd level</font></string>
    <string name="feats_menu_preq_techcasting_4"><font color="#d4af37">"           "3rd level</font></string>
    <string name="favorites_gold"><font color="#D4af37">Favorites</font></string>
    <string name="casting_info"><font color="#D4af37">Casting Info</font></string>
    <string name="species_info"><font color="#D4af37">Species Info</font></string>
    <string name="ec"><font color="#D4af37">EC</font></string>
</resources>