<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/equipment_info_equipment_info_packs"
        android:title="@string/equipment_info_equipment_packs"
        />
    <item
        android:id="@+id/equipment_info_ammunition"
        android:title="@string/equipment_info_ammunition"
        />
    <item
        android:id="@+id/equipment_info_communications"
        android:title="@string/equipment_info_communications"
        />
    <item
        android:id="@+id/equipment_info_data"
        android:title="@string/equipment_info_data"
        />
    <item
        android:id="@+id/equipment_info_explosives"
        android:title="@string/equipment_info_explosives"
        />
    <item
        android:id="@+id/equipment_info_life_support"
        android:title="@string/equipment_info_life_support"
        />
    <item
        android:id="@+id/equipment_info_medical_supplies"
        android:title="@string/equipment_info_medical_supplies"
        />
    <item
        android:id="@+id/equipment_info_storage"
        android:title="@string/equipment_info_storage"
        />
    <item
        android:id="@+id/equipment_info_utlities"
        android:title="@string/equipment_info_utilities"
        />
    <item
        android:id="@+id/equipment_info_weapon_and_armor_accessories"
        android:title="@string/equipment_info_weapon_and_armor_accessories"
        />
</menu>