<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:orderInCategory="1"
        android:title="@string/sortABCdown"
        app:showAsAction="ifRoom"
        android:iconTintMode="add"
        android:iconTint="@color/gold"
        />
    <item
        android:id="@+id/filters"
        android:orderInCategory="2"
        android:title="@string/equipment_menu_filters"
        android:enabled="false"
        />
    <item
        android:id="@+id/eqmenu_weapons"
        android:orderInCategory="3"
        android:title="@string/equipment_menu_weapon"
        android:checkable="true"
        android:checked="true"
        />
    <group
        android:id="@+id/eqmenu_weapons_group"
        android:visible="true"
        android:checkableBehavior="none"
        android:orderInCategory="3">
        <item
            android:id="@+id/eqmenu_simple"
            android:orderInCategory="3"
            android:title="@string/equipment_menu_simple"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_martial"
            android:orderInCategory="3"
            android:title="@string/equipment_menu_martial"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_vibroweapons"
            android:orderInCategory="3"
            android:title="@string/equipment_menu_vibroweapon"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_lightweapons"
            android:orderInCategory="3"
            android:title="@string/equipment_menu_lightweapon"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_blasters"
            android:orderInCategory="3"
            android:title="@string/equipment_menu_blaster"
            android:checkable="true"
            android:checked="true"
            />
    </group>
    <item
        android:id="@+id/eqmenu_armors_and_shields"
        android:orderInCategory="4"
        android:title="@string/equipment_menu_armors_and_shields"
        android:checkable="true"
        android:checked="true"
        />
    <group
        android:id="@+id/eqmenu_armors_group"
        android:visible="true"
        android:checkableBehavior="none"
        android:orderInCategory="5">
        <item
            android:id="@+id/eqmenu_light"
            android:orderInCategory="5"
            android:title="@string/equipment_menu_light"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_medium"
            android:orderInCategory="5"
            android:title="@string/equipment_menu_medium"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_heavy"
            android:orderInCategory="5"
            android:title="@string/equipment_menu_heavy"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_armors"
            android:orderInCategory="5"
            android:title="@string/equipment_menu_armors"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_shields"
            android:orderInCategory="5"
            android:title="@string/equipment_menu_shields"
            android:checkable="true"
            android:checked="true"
            />
    </group>
    <item
        android:id="@+id/eqmenu_advgear"
        android:orderInCategory="6"
        android:title="@string/equipment_menu_advgear"
        android:checkable="true"
        android:checked="true"
        />
    <group
        android:id="@+id/eqmenu_advgear_group"
        android:visible="true"
        android:checkableBehavior="none"
        android:orderInCategory="7">
        <item
            android:id="@+id/eqmenu_ammunition"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_ammunition"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_communications"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_communications"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_data"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_data"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_life_support"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_life_support"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_medical_supplies"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_medical_supplies"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_storage"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_storage"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_utilities"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_utilities"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_accessories"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_accessories"
            android:checkable="true"
            android:checked="true"
            />
        <item
            android:id="@+id/eqmenu_tools"
            android:orderInCategory="7"
            android:title="@string/equipment_menu_tools"
            android:checkable="true"
            android:checked="true"
            />
    </group>
    <item
        android:id="@+id/menu_maneuvers_fav"
        android:orderInCategory="100"
        android:title="@string/equipment_menu_favorites"
        android:checkable="true" />
    <item
        android:id="@+id/eqmenu_ok"
        android:orderInCategory="101"
        android:title="@string/equipment_menu_ok"
        android:visible="false"
        />
</menu>