<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.sw5ecompanionapp.forcecasting.ForcecastingActivity">
    <item
        android:id="@+id/sort"
        android:orderInCategory="1"
        android:title="@string/sortABCdown"
        app:showAsAction="ifRoom"
        android:iconTintMode="add"
        android:iconTint="@color/gold"
        />
    <item
        android:id="@+id/filters"
        android:orderInCategory="2"
        android:title="@string/equipment_menu_filters"
        android:enabled="false"
        />
    <item
        android:id="@+id/menu_switch_asi"
        android:orderInCategory="2"
        android:title="@string/feats_menu_ability_score"
        android:checkable="true"
        android:checked="false"
        />
    <group
        android:id="@+id/feats_menu_asi_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="3">
        <item
            android:id="@+id/menu_switch_Str"
            android:orderInCategory="3"
            android:title="@string/feats_menu_str"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/menu_switch_Dex"
            android:orderInCategory="3"
            android:title="@string/feats_menu_dex"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/menu_switch_Con"
            android:orderInCategory="3"
            android:title="@string/feats_menu_con"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/menu_switch_Int"
            android:orderInCategory="3"
            android:title="@string/feats_menu_int"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/menu_switch_Wis"
            android:orderInCategory="3"
            android:title="@string/feats_menu_wis"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/menu_switch_Cha"
            android:orderInCategory="3"
            android:title="@string/feats_menu_cha"
            android:checkable="true"
            android:checked="false"
            />
    </group>
    <item
        android:id="@+id/menu_switch_preq"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq"
        android:checkable="true"
        android:checked="false"
        />
    <item
        android:id="@+id/menu_switch_preq_level"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq_level"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        />
    <group
        android:id="@+id/feats_menu_preq_level_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="4">
        <item
            android:id="@+id/feats_menu_preq_level_1"
            android:checkable="true"
            android:checked="false"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_level_1"
            />
        <item
            android:id="@+id/feats_menu_preq_level_2"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_level_2"
            android:checkable="true"
            android:checked="false"
            />
    </group>

    <item
        android:id="@+id/feats_menu_preq_type"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq_type"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        />
    <group
        android:id="@+id/feats_menu_preq_type_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="4">
        <item
            android:id="@+id/feats_menu_preq_type_1"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_type_1"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_type_2"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_type_2"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_type_3"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_type_3"
            android:checkable="true"
            android:checked="false"
            />
    </group>

    <item
        android:id="@+id/feats_menu_preq_size"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq_size"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        />
    <group
        android:id="@+id/feats_menu_preq_size_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="4">
        <item
            android:id="@+id/feats_menu_preq_size_1"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_size_1"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_size_2"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_size_2"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_size_3"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_size_3"
            android:checkable="true"
            android:checked="false"
            />
    </group>
    <item
        android:id="@+id/feats_menu_preq_forcecasting"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq_forcecasting"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        />
    <group
        android:id="@+id/feats_menu_preq_forcecasting_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="4">
        <item
            android:id="@+id/feats_menu_preq_forcecasting_1"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_forcecasting_1"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_forcecasting_2"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_forcecasting_2"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_forcecasting_3"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_forcecasting_3"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_forcecasting_4"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_forcecasting_4"
            android:checkable="true"
            android:checked="false"
            />
    </group>

    <item
        android:id="@+id/feats_menu_preq_techcasting"
        android:orderInCategory="4"
        android:title="@string/feats_menu_preq_techcasting"
        android:checkable="true"
        android:checked="false"
        android:visible="false"
        />
    <group
        android:id="@+id/feats_menu_preq_techcasting_group"
        android:visible="false"
        android:checkableBehavior="none"
        android:orderInCategory="4">
        <item
            android:id="@+id/feats_menu_preq_techcasting_1"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_techcasting_1"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_techcasting_2"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_techcasting_2"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_techcasting_3"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_techcasting_3"
            android:checkable="true"
            android:checked="false"
            />
        <item
            android:id="@+id/feats_menu_preq_techcasting_4"
            android:orderInCategory="4"
            android:title="@string/feats_menu_preq_techcasting_4"
            android:checkable="true"
            android:checked="false"
            />
    </group>

    <item
        android:id="@+id/menu_switch_Fav"
        android:orderInCategory="5"
        android:title="@string/favorites_gold"
        android:checkable="true"
        android:checked="false" />
    <item
        android:id="@+id/eqmenu_ok"
        android:orderInCategory="101"
        android:title="@string/equipment_menu_ok"
        android:visible="false"
        />
</menu>