<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.amachewrs.sw5ecompanionapp.forcecasting.ForcecastingActivity">
    <item
        android:id="@+id/sort"
        android:orderInCategory="1"
        android:title="@string/sortABCdown"
        app:showAsAction="ifRoom"
        android:iconTintMode="add"
        android:iconTint="@color/gold"
        />
    <item
        android:id="@+id/menu_info"
        android:orderInCategory="2"
        android:title="@string/casting_info"
        />
    <item
        android:id="@+id/menu_switch_Dark"
        android:orderInCategory="3"
        android:title="@string/Dark"
        android:checkable="true"
        android:checked="true"
        />
    <item
        android:id="@+id/menu_switch_Light"
        android:orderInCategory="4"
        android:title="@string/Light"
        android:checkable="true"
        android:checked="true" />
    <item
        android:id="@+id/menu_maneuvers_fav"
        android:orderInCategory="5"
        android:title="@string/favorites_gold"
        android:checkable="true"
        android:checked="false" />


</menu>